WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
141982
Pass FillLayer reference instead of pointer to RenderBoxModelObject::calculateBackgroundImageGeometry.
https://bugs.webkit.org/show_bug.cgi?id=141982
Summary
Pass FillLayer reference instead of pointer to RenderBoxModelObject::calculat...
alan
Reported
2015-02-24 13:57:41 PST
It is not supposed to be nullptr.
Attachments
Patch
(13.46 KB, patch)
2015-02-24 14:02 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2015-02-24 14:02:01 PST
Created
attachment 247265
[details]
Patch
WebKit Commit Bot
Comment 2
2015-02-24 14:53:26 PST
Comment on
attachment 247265
[details]
Patch Clearing flags on attachment: 247265 Committed
r180586
: <
http://trac.webkit.org/changeset/180586
>
WebKit Commit Bot
Comment 3
2015-02-24 14:53:30 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug