Pass FillLayer reference instead of pointer to RenderBoxModelObject::calculateBackgroundImageGeometry. https://bugs.webkit.org/show_bug.cgi?id=141982

Reviewed by Simon Fraser.

There should always be a valid FillLayer.

No change in functionality.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::getBackgroundPaintedExtent):
(WebCore::RenderBox::maskClipRect):
(WebCore::RenderBox::repaintLayerRectsForImage):
* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintFillLayerExtended):
(WebCore::RenderBoxModelObject::calculateFillTileSize):
(WebCore::RenderBoxModelObject::calculateBackgroundImageGeometry):
(WebCore::RenderBoxModelObject::getGeometryForBackgroundImage):
* rendering/RenderBoxModelObject.h:


Canonical link: https://commits.webkit.org/160002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180586 268f45cc-cd09-0410-ab3c-d52691b4dbfc